fixed animation and attempted fix of overflow issue

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -83,7 +83,7 @@ h4 {
 @media only screen and (max-width: 28rem) {
     #hero-text:hover {
         transform: scale(1);
-        overflow: visible;
+        
     }
 
 
@@ -96,7 +96,8 @@ h4 {
         display: none;
     }
 
-    .hero-text {
+    #hero-text {
+        overflow: visible;
         animation: breathing 10s ease-in-out infinite normal;
     }
 }
